<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.dfki.mary</groupId>
	<artifactId>marytts</artifactId>
	<version>5.1.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>MARY TTS</name>
	<url>http://mary.dfki.de</url>
	<description>An open-source, multilingual Text-to-Speech Synthesis platform written in Java</description>
	<inceptionYear>2000</inceptionYear>

	<licenses>
		<license>
			<name>GNU Lesser General Public License v3.0</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
		</license>
	</licenses>

	<organization>
		<name>DFKI GmbH</name>
		<url>http://www.dfki.de/</url>
	</organization>

	<developers>
		<developer>
			<name>Marc Schröder</name>
			<id>marc1s</id>
		</developer>
		<developer>
			<name>Marcela Charfuelan</name>
			<id>marcelach1</id>
		</developer>
		<developer>
			<name>Ingmar Steiner</name>
			<id>psibre</id>
		</developer>
		<developer>
			<name>Sathish Chandra Pammi</name>
			<id>sathishpc</id>
		</developer>
		<developer>
			<name>Maureen Tanuadji</name>
			<id>mochanz</id>
		</developer>
	</developers>

	<contributors>
		<!-- in alphabetical order -->
		<contributor>
			<name>Stefanie Becker</name>
		</contributor>
		<contributor>
			<name>Harald Berthelsen</name>
		</contributor>
		<contributor>
			<name>Paulo Faria</name>
		</contributor>
		<contributor>
			<name>Anna Hunecke</name>
		</contributor>
		<contributor>
			<name>Sacha Krstulović</name>
		</contributor>
		<contributor>
			<name>Giulio Paci</name>
		</contributor>
		<contributor>
			<name>Benjamin Roth</name>
		</contributor>
		<contributor>
			<name>Nickolay Shmyrev</name>
		</contributor>
		<contributor>
			<name>Jochen Steigner</name>
		</contributor>
		<contributor>
			<name>Fabio Tesser</name>
		</contributor>
		<contributor>
			<name>Oytun Türk</name>
		</contributor>
		<contributor>
			<name>Mat Wilson</name>
		</contributor>
	</contributors>

	<distributionManagement>
		<site>
			<id>dfki</id>
			<url>scpexe://mary:/local/mary/www</url>
		</site>
		<downloadUrl>https://bitbucket.org/marytts/marytts/downloads</downloadUrl>
		<repository>
			<id>bintray</id>
			<url>https://api.bintray.com/maven/marytts/marytts/marytts</url>
		</repository>
	</distributionManagement>

	<mailingLists>
		<mailingList>
			<name>mary-users</name>
			<archive>http://www.dfki.de/pipermail/mary-users/</archive>
			<post>mary-users@dfki.de</post>
			<subscribe>mary-users-request@dfki.de?subject=subscribe</subscribe>
			<unsubscribe>mary-users-request@dfki.de?subject=unsubscribe</unsubscribe>
		</mailingList>
		<mailingList>
			<name>mary-dev</name>
			<archive>http://www.dfki.de/pipermail/mary-dev/</archive>
			<post>mary-dev@dfki.de</post>
			<subscribe>mary-dev-request@dfki.de?subject=subscribe</subscribe>
			<unsubscribe>mary-dev-request@dfki.de?subject=unsubscribe</unsubscribe>
		</mailingList>
	</mailingLists>

	<issueManagement>
		<system>github</system>
		<url>https://github.com/marytts/marytts/issues/</url>
	</issueManagement>

	<scm>
		<url>https://github.com/psibre/marytts</url>
		<connection>scm:git:https://github.com/psibre/marytts.git</connection>
		<developerConnection>scm:git:git@github.com/psibre/marytts.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- this path is defined in the parent POM, but only accessed in the children POMs -->
		<project.local.repository.path>${project.basedir}/../lib/repo</project.local.repository.path>
	</properties>

	<modules>
		<module>marytts-common</module>
		<module>marytts-signalproc</module>
		<module>marytts-runtime</module>
		<module>marytts-client</module>
		<module>marytts-builder</module>
		<module>marytts-redstart</module>
		<module>marytts-transcription</module>
		<module>marytts-lang-de</module>
		<module>marytts-lang-en</module>
		<module>marytts-lang-te</module>
		<module>marytts-lang-tr</module>
		<module>marytts-lang-ru</module>
		<module>marytts-lang-it</module>
		<module>marytts-lang-fr</module>
		<module>marytts-lang-sv</module>
		<module>voice-cmu-slt-hsmm</module>
		<module>marytts-assembly</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.1</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.0.1</version>
			</dependency>

			<dependency>
				<groupId>de.dfki.mary</groupId>
				<artifactId>emotionml-checker-java</artifactId>
				<version>1.1</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
			</dependency>

			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.16</version>
			</dependency>

			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>5.1.16</version>
			</dependency>

			<dependency>
				<groupId>oro</groupId>
				<artifactId>oro</artifactId>
				<version>2.0.8</version>
			</dependency>

			<dependency>
				<groupId>com.cloudbees</groupId>
				<artifactId>diff4j</artifactId>
				<version>1.0</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>14.0.1</version>
			</dependency>

			<dependency>
				<groupId>de.dfki.lt.jtok</groupId>
				<artifactId>jtok-core</artifactId>
				<version>1.9.1</version>
			</dependency>

			<dependency>
				<groupId>de.dfki.mary</groupId>
				<artifactId>freetts</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>de.dfki.mary</groupId>
				<artifactId>freetts-de</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>de.dfki.mary</groupId>
				<artifactId>freetts-en_us</artifactId>
				<version>1.0</version>
			</dependency>

			<dependency>
				<groupId>gov.noaa.pmel.sgt</groupId>
				<artifactId>sgt</artifactId>
				<version>3.0</version>
			</dependency>

			<dependency>
				<groupId>net.sf.trove4j</groupId>
				<artifactId>trove4j</artifactId>
				<version>2.0.2</version>
			</dependency>

			<dependency>
				<groupId>nz.ac.waikato.cms.weka</groupId>
				<artifactId>weka-dev</artifactId>
				<version>3.7.6</version>
			</dependency>

			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpcore</artifactId>
				<version>4.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpcore-nio</artifactId>
				<version>4.1</version>
			</dependency>

			<dependency>
				<groupId>org.apache.opennlp</groupId>
				<artifactId>opennlp-maxent</artifactId>
				<version>3.0.3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.opennlp</groupId>
				<artifactId>opennlp-tools</artifactId>
				<version>1.5.3</version>
			</dependency>

			<dependency>
				<groupId>org.easytesting</groupId>
				<artifactId>fest-assert</artifactId>
				<version>1.4</version>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>1.3</version>
			</dependency>

			<dependency>
				<groupId>org.hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>2.0.0</version>
			</dependency>

			<dependency>
				<groupId>org.incava</groupId>
				<artifactId>java-diff</artifactId>
				<version>1.1</version>
			</dependency>

			<dependency>
				<groupId>org.swinglabs</groupId>
				<artifactId>swing-layout</artifactId>
				<version>1.0.3</version>
			</dependency>

			<dependency>
				<groupId>org.wikimedia</groupId>
				<artifactId>mwdumper</artifactId>
				<version>1.16</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>marytts-dependencies</id>
			<name>marytts-dependencies</name>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>file://${project.local.repository.path}</url>
		</repository>
		<repository>
			<id>central</id>
			<name>jcenter</name>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>http://jcenter.bintray.com</url>
		</repository>
	</repositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.1</version>
				</plugin>

				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.3</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.wagon</groupId>
							<artifactId>wagon-ssh-external</artifactId>
							<version>2.6</version>
						</dependency>
					</dependencies>
				</plugin>

				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.3</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>1.3.1</version>
				<executions>
					<execution>
						<id>enforce-java-7-or-higher</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>1.7</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<!-- Unit tests -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<!--forkMode>pertest</forkMode -->
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m</argLine>
					<excludes>
						<!--exclude>**/util/**/*.java</exclude -->
						<exclude>**/modules/MaryModuleTestCase.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			
			<!-- Integration tests -->
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.8</version>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>-Xms256m -Xmx512m</argLine>
					<systemPropertyVariables>
						<!-- The MARY installation directory, as seen from our subproject's perspective: -->
						<mary.base>${basedir}/..</mary.base>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<!-- Reports generated when executing 'mvn site' -->
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.7</version>
				<reportSets>
					<reportSet>
						<reports>
              				<!-- <report>dependencies</report> -->
							<report>index</report>
							<report>project-team</report>
							<report>mailing-list</report>
							<report>cim</report>
							<report>issue-tracking</report>
							<report>license</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			
			<!-- Generate javadoc -->
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<destDir>javadoc</destDir>
					<!-- TODO temporarily skip this -->
					<skip>true</skip>
				</configuration>
				<reportSets>
					<reportSet>
						<id>default</id>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>aggregate</id>
						<reports>
							<report>aggregate</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			
			<!-- Look for duplicate code (CPD): -->
			<!-- <plugin>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<linkXref>true</linkXref>
					<sourceEncoding>UTF-8</sourceEncoding>
					<minimumTokens>30</minimumTokens>
					<targetJdk>1.6</targetJdk>
					<reportSets>
						<reportSet>
							<reports>
								<report>pmd</report>
								<report>cpd</report>
							</reports>
						</reportSet>
					</reportSets>
				</configuration>
			</plugin> -->
			
			<!-- Check style guidelines -->
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.6</version>
			</plugin> -->

			<!-- Look for typical programming mistakes: -->
			<!-- <plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
					<xmlOutput>true</xmlOutput>
					<excludeFilterFile>findbugs-excludes.xml</excludeFilterFile>
				</configuration>
			</plugin> -->
			
 			<!-- Measure the test code coverage: -->
			<!-- <plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>emma-maven-plugin</artifactId>
				<version>1.0-alpha-3</version>
			</plugin> -->
			
			<!-- Web page presenting unit test results: -->
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.7.1</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>report-only</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin> -->
			
			<!-- Number of lines of code: -->
			<!-- <plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javancss-maven-plugin</artifactId>
				<version>2.0</version>
			</plugin> -->

		</plugins>
	</reporting>

</project>
